[package]
name = "dia-export-bookmark"
version = "0.1.0"
description = "Dia browser bookmark export tool for macOS"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dia_export_bookmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
plist = "1"
